my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20030216-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20030216-1.c:8:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    8 | main ()
      | ^
      | int
1 error generated.
